--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@babel/types": "^7.20.5",
     "@mdi/font": "7.0.96",
+    "@types/web-bluetooth": "^0.0.16",
     "@vueuse/core": "^9.6.0",
     "dayjs": "^1.11.6",
+    "gsap": "^3.11.3",
     "roboto-fontface": "*",
     "vue": "^3.2.38",
     "vuetify": "^3.0.0",
