NEW: eslint and prettier

--- a/package.json
+++ b/package.json
@@ -4,15 +4,28 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint . --no-fix --ext .ts,.vue",
+    "format": "eslint . --ext .ts,.vue --fix"
   },
   "dependencies": {
     "@babel/types": "^7.20.5",
     "@mdi/font": "7.0.96",
     "@types/web-bluetooth": "^0.0.16",
+    "@types/node": "^18.11.9",
+    "@typescript-eslint/eslint-plugin": "^5.45.0",
+    "@typescript-eslint/parser": "^5.45.0",
+    "@vue/eslint-config-prettier": "^7.0.0",
+    "@vue/eslint-config-typescript": "^11.0.2",
     "@vueuse/core": "^9.6.0",
     "dayjs": "^1.11.6",
+    "eslint": "^8.28.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
+    "eslint-plugin-vue": "^9.8.0",
     "gsap": "^3.11.3",
+    "prettier": "^2.8.0",
     "roboto-fontface": "*",
     "vue": "^3.2.38",
     "vuetify": "^3.0.0",
